--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,21 @@
 .App {
   margin: 20px;
 }
+.countries {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.country-item {
+  list-style: none;
+  min-width: 30%;
+  padding: 10px;
+}
+.country-item:hover {
+  cursor: pointer;
+}
+.country-info {
+  display: table;
+  padding: 50px 20px;
+  margin: 0 auto;
+}
